Ingress/nginx-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: app1-nginx-deployment
 labels:
   app: app1-nginx
spec:
  replicas: 1
  selector:
   matchLabels:
     app: app1-nginx
  template:
   metadata:
     name: app1-nginx-pod
     labels:
      app: app1-nginx
   spec:
     containers:
      - name: app1-nginx
        image: nginx
        ports:
         - containerPort: 80
...
