Ingress/tomcat-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: app2-tomcat-deployment
 labels:
   app: app2-tomcat
spec:
  replicas: 1
  selector:
   matchLabels:
     app: app2-tomcat
  template:
   metadata:
     name: app2-tomcat-pod
     labels:
      app: app2-tomcat
   spec:
     containers:
      - name: app2-tomcat
        image: tomee
        ports:
         - containerPort: 8080
...
