Ingress/httpd-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: app3-httpd-clusterip-service
  labels:
   app: app3-httpd
spec:
  type: ClusterIP
  ports:
   - port: 80
     targetPort: 80
  selector:
    app: app3-httpd
...
