Ingress/nginx-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: app1-nginx-clusterip-service
  labels:
   app: app1-nginx
spec:
  type: ClusterIP
  ports:
   - port: 80
     targetPort: 80
  selector:
    app: app1-nginx
...
