Ingress/tomcat-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: app2-tomcat-clusterip-service
  labels:
   app: app2-tomcat
spec:
  type: ClusterIP
  ports:
   - port: 8080
     targetPort: 8080
  selector:
    app: app2-tomcat 
...
