Ingress/ingress-basic.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: myingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app1-nginx-clusterip-service
                port:
                  number: 80
          - path: /app1
            pathType: Prefix
            backend:
              service:
                name: app2-tomcat-clusterip-service
                port:
                 number: 8080
          - path: /app2
            pathType: Prefix
            backend:
              service:
                name: app3-httpd-clusterip-service
                port:
                 number: 80
...
